JIRA-59: Provide new macros for displaying charts in pages
  * Add unstable annotation
  * Fix minor stuff